--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "grunt-cypress",
   "version": "1.0.0",
   "description": "A grunt wrapper for Cypress, a test runner for your projects",
-  "scripts": {},
+  "scripts": {
+    "postinstall": "./scripts/postinstall.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/laurenhamel/grunt-cypress.git"
@@ -19,5 +21,11 @@
   "bugs": {
     "url": "https://github.com/laurenhamel/grunt-cypress/issues"
   },
-  "homepage": "https://github.com/laurenhamel/grunt-cypress#readme"
+  "homepage": "https://github.com/laurenhamel/grunt-cypress#readme",
+  "dependencies": {
+    "cypress": "^3.1.4"
+  },
+  "devDependencies": {
+    "fs-extra": "^7.0.1"
+  }
 }
