Removes `cypress` as a dependency
Dependencies are no longer installed alongside this package. Requires that the `cypress` package be installed separately. This places control  over versioning dependencies back in the hands of the end user.

--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "url": "https://github.com/laurenhamel/grunt-cypress/issues"
   },
   "homepage": "https://github.com/laurenhamel/grunt-cypress#readme",
-  "dependencies": {
-    "cypress": "^3.1.4"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "fs-extra": "^7.0.1"
+    "chalk": "^2.4.2",
+    "cypress": "^3.1.5",
+    "fs-extra": "^7.0.1",
+    "grunt": "^1.0.3"
   }
 }
