--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "url": "https://github.com/laurenhamel/grunt-cypress/issues"
   },
   "homepage": "https://github.com/laurenhamel/grunt-cypress#readme",
-  "dependencies": {},
+  "dependencies": {
+    "chalk": "^2.4.2"
+  },
   "devDependencies": {
-    "chalk": "^2.4.2",
     "cypress": "^3.1.5",
     "fs-extra": "^7.0.1",
     "grunt": "^1.0.3"
